@startuml
' ============================================================
' Диаграмма классов (Class Diagram) — La Bella Italia
' ============================================================
' Скопировать в https://www.planttext.com для рендера

skinparam backgroundColor #FEFEFE
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0

title **Диаграмма классов (Class Diagram)**

' === Класс User ===
class User {
  - id: INTEGER (PK)
  - name: VARCHAR(255)
  - email: VARCHAR(255) (UNIQUE)
  - password: VARCHAR(255)
  - phone: VARCHAR(50)
  - role: VARCHAR(20)
  - bonusPoints: INTEGER
  - createdAt: TIMESTAMP
  --
  + register(email, password, name): User
  + login(email, password): User
  + getProfile(): User
  + updateBonuses(points): void
  + getOrders(): Order[]
}

' === Класс MenuItem ===
class MenuItem {
  - id: INTEGER (PK)
  - category: VARCHAR(50)
  - name: VARCHAR(255)
  - desc: TEXT
  - price: INTEGER
  - weight: VARCHAR(20)
  - img: VARCHAR(50)
  - photo: VARCHAR(500)
  - macros: JSONB {kcal, protein, fat, carbs}
  - popular: BOOLEAN
  --
  + findAll(): MenuItem[]
  + findByCategory(cat): MenuItem[]
  + search(query): MenuItem[]
  + create(item): MenuItem
  + deleteById(id): void
}

' === Класс Order ===
class Order {
  - id: INTEGER (PK)
  - userId: INTEGER (FK → User.id)
  - items: JSONB [{id, name, price, qty, img}]
  - total: INTEGER
  - bonusDiscount: INTEGER
  - finalTotal: INTEGER
  - earnedBonuses: INTEGER
  - deliveryData: JSONB {name, phone, address}
  - status: ENUM(confirmed, preparing, delivering, done, cancelled)
  - createdAt: TIMESTAMP
  --
  + create(items, deliveryData, useBonuses): Order
  + findByUser(userId): Order[]
  + findAll(): Order[]
  + updateStatus(id, status): void
  + deleteById(id): void
  + getStats(): Stats
  + calculateTotal(): int
  + calculateBonuses(): int
}

' === Связи ===
User "1" -- "*" Order : имеет заказы >
Order "*" -- "1" User : принадлежит >

note top of User
  **Роли:**
  • 'user' — клиент
  • 'admin' — администратор
  bonusPoints = 100 при регистрации
end note

note top of MenuItem
  **Категории:**
  pizza, pasta, starters,
  desserts, drinks
  Всего: 50 блюд
end note

note top of Order
  **Жизненный цикл:**
  confirmed → preparing →
  delivering → done
  (или cancelled)
end note

note bottom of Order
  **Расчёт бонусов:**
  total = Σ(price × qty)
  bonusDiscount =
    min(user.bonusPoints,
        floor(total × 0.3))
  finalTotal =
    total - bonusDiscount
  earnedBonuses =
    floor(finalTotal × 0.05)
end note

@enduml
